# libmaskrcnn-trt

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  maskrcnn-trt.pc.in
.reuse/: dep5
LICENSES/: Apache-2.0.txt
cmake/modules/: find_library_create_target.cmake  set_ifndef.cmake
include/: buffers.hpp  filesystem.hpp  half.hpp  maskrcnn_config.hpp
include/maskrcnn_trt/: common.hpp  detection.hpp  logger.hpp  logging.hpp  maskrcnn.hpp  maskrcnn_config.hpp
src/: detection.cpp  logger.cpp  maskrcnn.cpp  maskrcnn_camera.cpp  maskrcnn_config.cpp  maskrcnn_example.cpp
